--- a/environment.yml
+++ b/environment.yml
@@ -3,8 +3,10 @@ name: CatEnv
 dependencies:
   - python=3.7.0
   - numpy
-  - neuprint
   - matplotlib
   - pandas
+  - seaborn
+  - pip:
+    - neuprint
 
 
